--- a/RL_Value_Iteration.ipynb
+++ b/RL_Value_Iteration.ipynb
@@ -141,10 +141,11 @@
       },
       "outputs": [],
       "source": [
-        "envdesc  = ['','','', '']\n",
-        "env = gym.make('FrozenLake-v1',desc=envdesc)\n",
-        "init_state = env.reset()\n",
-        "goal_state = #Enter the Goal state\n",
+        "envdesc  = ['FSFF','FFFF','FFHF', 'GFFH']"
+        "env = gym.make('FrozenLake-v1',desc=envdesc)"
+        "init_state = env.reset()"
+        "goal_state = 12 #(Goal State)"
+        "P = env.env.Pr the Goal state\n",
         "P = env.env.P"
       ]
     },
